DD4J-1186 PR fixes and additional validations